--- a/pom.xml
+++ b/pom.xml
@@ -168,11 +168,11 @@
             <artifactId>jxl</artifactId>
             <version>2.6.12</version>
         </dependency>
-        <!-- 调用 -->
+        <!--支付宝后端sdk-->
         <dependency>
-            <groupId>org.python</groupId>
-            <artifactId>jython-standalone</artifactId>
-            <version>2.7.0</version>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.7.26.ALL</version>
         </dependency>
     </dependencies>
 
